# digi-mado-broken-link-builder

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  run_one_query.yml
config/: app.yaml  sheet_layout.yaml
config/filters/: allowed_tlds.txt  competitor_hosts.txt  competitor_roots.txt  skip_terms_ja.txt  skip_url_patterns.regex  soft404_signals_ja.txt
docs/: filtering_design.md  flow.md  sheets_schema.md
scripts/: bootstrap_sheets.py  dry_run_local.py
src/: anchor_extractor.py  cse_client.py  filters.py  link_checker.py  main.py  sheets_client.py
src/models/: anchor_item.py  broken_link.py  serp_item.py
src/utils/: logging_setup.py  normalizer.py  url_tools.py
tests/: test_anchor_extractor.py  test_filters.py  test_link_checker.py
